// Database Schema for Max API Bot Application
// Используется для генерации диаграммы на dbdiagram.io

Project MaxBot {
  database_type: 'MySQL'
  Note: 'База данных для мини-приложения синхронных сессий фокуса с интеграцией Max API'
}

// Таблица пользователей
Table users {
  id varchar(36) [pk]
  max_user_id bigint [unique, not null, note: 'ID пользователя в Max API']
  name varchar(255) [not null]
  avatar_url text [note: 'URL аватара пользователя']
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  
  indexes {
    max_user_id
  }
}

// Таблица статистики пользователей
Table user_stats {
  user_id varchar(36) [pk, ref: > users.id, note: 'CASCADE DELETE']
  total_sessions int [default: 0, not null, note: 'Общее количество сессий']
  total_focus_time int [default: 0, not null, note: 'Общее время фокуса в минутах']
  current_streak int [default: 0, not null, note: 'Текущая серия дней подряд']
  last_session_date date
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
}

// Таблица сессий
Table sessions {
  id varchar(36) [pk]
  mode enum [not null, note: 'solo | group']
  status enum [default: 'pending', not null, note: 'pending | active | completed | cancelled']
  focus_duration int [not null, note: 'Длительность фокуса в минутах']
  break_duration int [not null, note: 'Длительность перерыва в минутах']
  group_name varchar(255)
  is_private boolean [default: false, not null]
  creator_id varchar(36) [not null, ref: > users.id, note: 'CASCADE DELETE']
  invite_link varchar(50) [unique, not null, note: 'Уникальная ссылка для приглашения']
  max_chat_id bigint [note: 'ID чата в Max API (для group sessions)']
  max_chat_link varchar(500) [note: 'Ссылка на чат в Max']
  started_at timestamp
  completed_at timestamp
  paused_at timestamp
  total_pause_time bigint [default: 0, not null, note: 'Общее время паузы в миллисекундах']
  current_cycle int [default: 0, not null, note: 'Текущий цикл (фокус+перерыв)']
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  
  indexes {
    creator_id
    status
    invite_link
    max_chat_id
    created_at
  }
}

// Таблица участников сессий
Table session_participants {
  session_id varchar(36) [pk, ref: > sessions.id, note: 'CASCADE DELETE']
  user_id varchar(36) [pk, ref: > users.id, note: 'CASCADE DELETE']
  user_name varchar(255) [not null]
  avatar_url text
  is_ready boolean [default: false, not null, note: 'Готовность участника начать сессию']
  joined_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  left_at timestamp [note: 'Время выхода из сессии']
  
  indexes {
    user_id
    session_id
  }
}

// Таблица задач
Table tasks {
  id varchar(36) [pk]
  session_id varchar(36) [not null, ref: > sessions.id, note: 'CASCADE DELETE']
  title varchar(500) [not null]
  completed boolean [default: false, not null]
  completed_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  
  indexes {
    session_id
    completed
  }
}

// Таблица сообщений (ОПЦИОНАЛЬНО)
// Сообщения из Max чата НЕ хранятся здесь, они хранятся в Max
// Эта таблица может использоваться для аналитики/кеширования
// Но основная функциональность работает без этой таблицы
Table messages {
  id varchar(36) [pk]
  session_id varchar(36) [not null, ref: > sessions.id, note: 'CASCADE DELETE']
  user_id varchar(36) [not null, ref: > users.id, note: 'CASCADE DELETE']
  user_name varchar(255) [not null]
  avatar_url text
  text text [not null]
  max_message_id varchar(255) [note: 'ID сообщения в Max API']
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  
  indexes {
    session_id
    user_id
    max_message_id
    created_at
  }
}

// Таблица лидерборда для сессий
Table session_leaderboard {
  session_id varchar(36) [pk, ref: > sessions.id, note: 'CASCADE DELETE']
  user_id varchar(36) [pk, ref: > users.id, note: 'CASCADE DELETE']
  tasks_completed int [default: 0, not null]
  focus_time int [default: 0, not null, note: 'Время фокуса в минутах']
  score int [default: 0, not null]
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  
  indexes {
    session_id
    user_id
    score
  }
}

// Таблица глобального лидерборда
Table global_leaderboard {
  user_id varchar(36) [pk, ref: > users.id, note: 'CASCADE DELETE']
  total_score int [default: 0, not null]
  total_sessions int [default: 0, not null]
  total_focus_time int [default: 0, not null, note: 'Общее время фокуса в минутах']
  updated_at timestamp [default: `CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP`, not null]
  
  indexes {
    total_score
  }
}

// Таблица refresh токенов
Table refresh_tokens {
  id varchar(36) [pk]
  user_id varchar(36) [not null, ref: > users.id, note: 'CASCADE DELETE']
  token varchar(500) [unique, not null]
  expires_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  revoked_at timestamp [note: 'Время отзыва токена']
  
  indexes {
    user_id
    token
    expires_at
  }
}

// Таблица отчетов о сессиях
Table session_reports {
  id varchar(36) [pk]
  session_id varchar(36) [unique, not null, ref: > sessions.id, note: 'CASCADE DELETE']
  tasks_completed int [default: 0, not null]
  tasks_total int [default: 0, not null]
  focus_time int [default: 0, not null, note: 'Время фокуса в минутах']
  break_time int [default: 0, not null, note: 'Время перерыва в минутах']
  cycles_completed int [default: 0, not null]
  completed_at timestamp [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`, not null]
  
  indexes {
    session_id
    completed_at
  }
}

// Таблица отчетов участников сессии
Table session_participant_reports {
  report_id varchar(36) [pk, ref: > session_reports.id, note: 'CASCADE DELETE']
  user_id varchar(36) [pk, ref: > users.id, note: 'CASCADE DELETE']
  user_name varchar(255) [not null]
  avatar_url text
  tasks_completed int [default: 0, not null]
  focus_time int [default: 0, not null, note: 'Время фокуса в минутах']
  
  indexes {
    user_id
  }
}

// Связи между таблицами
Ref: user_stats.user_id > users.id [delete: cascade]
Ref: sessions.creator_id > users.id [delete: cascade]
Ref: session_participants.session_id > sessions.id [delete: cascade]
Ref: session_participants.user_id > users.id [delete: cascade]
Ref: tasks.session_id > sessions.id [delete: cascade]
Ref: messages.session_id > sessions.id [delete: cascade]
Ref: messages.user_id > users.id [delete: cascade]
Ref: session_leaderboard.session_id > sessions.id [delete: cascade]
Ref: session_leaderboard.user_id > users.id [delete: cascade]
Ref: global_leaderboard.user_id > users.id [delete: cascade]
Ref: refresh_tokens.user_id > users.id [delete: cascade]
Ref: session_reports.session_id > sessions.id [delete: cascade]
Ref: session_participant_reports.report_id > session_reports.id [delete: cascade]
Ref: session_participant_reports.user_id > users.id [delete: cascade]

